# DSA

data_structures/include/: llist.h  stack.h
data_structures/src/: llist.c  stack.c  trees.c
sorting_algos/: CMakeLists.txt
sorting_algos/include/: utils.h
sorting_algos/src/: binarySearch.c  bubbleSort.c  heapSort.c  insertionSort.c  linearSearch.c  mergeSort.c  quickSort.c  selectionSort.c  utils.c
